--- a/src/styles.less
+++ b/src/styles.less
@@ -2019,29 +2019,34 @@ td .table-sm input, td .table-sm select, td .table-sm{
     background-color: #fff2f2 !important;
     color: #e66171 !important;
     border: 3px solid #ffaeb6 !important;
-    .customToast-img();
+	//.customToast-img();
+	background: transparent;
 }
 .toast-success {
     background-color: #d2f7e0 !important;
     color: #28942c !important;
     border: 3px solid #66c285 !important;
-    .customToast-img();
+	//.customToast-img();
+	background: transparent;
 }
 .toast-info {
     background-color: #e9f7ff !important;
     color: #58a5cc !important;
     border: 3px solid #a1e0ff !important;
-    .customToast-img();
+	//.customToast-img();
+	background: transparent;
 }
 .toast-warning {
     background-color: #fff7e2 !important;
     color: #f9a72b !important;
     border: 3px solid #ffc266 !important;
-    .customToast-img();
+	//.customToast-img();
+	background: transparent;
 }
 .toast-container .ngx-toastr {
-    padding: 15px 15px 15px 86px;
-    width: 400px;
+    padding: 15px 15px 15px 15px;
+	width: 400px;
+	font-family: 'Open Sans', sans-serif;
 }
 .table-dark-head th{
 	color: #252531;
@@ -2103,4 +2108,7 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	}
 	.close-button i {
 		color: gray;
+	}
+	.padding0{
+		padding:0px;
 	}
