--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -190,8 +190,8 @@
   
                     <div class="col-12" formArrayName="services">
                       <div class="row" *ngFor="let serviceArr of servicesForm.get('services')['controls']; let i=index">
-                        <div class="col-12 " [formGroupName]="i" *ngIf="this.servicesForm.value.services.length == i+1 || editMode">                          
-                          <div class="col-6 form-group mb-3 pl-4 text-muted">
+                        <div class="col-12 padding0" [formGroupName]="i" *ngIf="this.servicesForm.value.services.length == i+1 || editMode">                          
+                          <div class="col-6 form-group mb-3 text-muted">
                             <label>Service Name</label>
                             <div class="d-flex  mr-4 align-items-center">
                               <input type="text" class="form-control input_len" formControlName="serviceName" 
@@ -212,8 +212,8 @@
                             </span>
                           </div>  
 
-                          <div class="row">
-                            <div class="col-4 mb-3 pl-4 form-group">
+                          <div class="col-6 padding0">
+                            <div class="col-4 mb-3 form-group">
                               <table class="table table-bordered">
                                 <thead>
                                 <tr>
@@ -231,7 +231,9 @@
                                         <label class="custom-control-label" for="featureName{{i}}">{{featureName}}</label>
                                       </div>
                                       <td *ngIf = "editMode"><span *ngIf="!isFeaturePresent[i]['serviceFeatures'][f]">-</span><span><i *ngIf="isFeaturePresent[i]['serviceFeatures'][f]" class="fa fa-check" aria-hidden="true"></i></span></td>
-                                      <td *ngIf = "!editMode"><span>-</span></td>
+                                      <td *ngIf = "!editMode && featureName == 'visibility'"><span *ngIf="gateId == '' || gateId == null || gateId == undefined">-</span><span><i *ngIf = "gateId != '' && gateId != null && gateId != undefined" class="fa fa-check" aria-hidden="true"></i></span></td>
+                                      <td *ngIf = "!editMode && featureName == 'deployment_verification'"><span>-</span></td>
+                                      <td *ngIf = "!editMode && featureName == 'sapor'"><span>-</span></td>
                                       <!-- <span><i *ngIf = "gateId != '' && gateId != null && gateId != undefined " class="fa fa-check" aria-hidden="true"></i></span> -->
                                     </tr>
                                   </ng-container>
