--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -191,7 +191,7 @@
                     <div class="col-12" formArrayName="services">
                       <div class="row" *ngFor="let serviceArr of servicesForm.get('services')['controls']; let i=index">
                         <div class="col-12 padding0" [formGroupName]="i" *ngIf="this.servicesForm.value.services.length == i+1 || editMode">                          
-                          <div class="col-6 form-group mb-3 text-muted">
+                          <div class="col-6 form-group mb-3 text-muted padding0">
                             <label>Service Name</label>
                             <div class="d-flex  mr-4 align-items-center">
                               <input type="text" class="form-control input_len" formControlName="serviceName" 
@@ -212,7 +212,7 @@
                             </span>
                           </div>  
 
-                          <div class="col-6 padding0">
+                          <div class="row padding0">
                             <div class="col-4 mb-3 form-group">
                               <table class="table table-bordered">
                                 <thead>
@@ -314,8 +314,8 @@
                                       <div class="page_access text-right py-2 px-3">
                                         <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                                         <button class="btn btn-primary ml-2" (click)="SubmitSaporForm(i)">Save</button>
-                                        <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
-                                        <button class="btn btn-danger ml-1" (click)="cancelForm()">Delete</button>
+                                        <!-- <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button> -->
+                                        <button class="btn btn-danger ml-1"  (click)="deleteSaporForm(i)" >Delete</button>
                                       </div>
                                     </div>
                                   </div>
