Time stamp with error handling for pending gate

--- a/src/app/visibility/visibility.component.less
+++ b/src/app/visibility/visibility.component.less
@@ -95,3 +95,10 @@
 .service-list {
     padding: 15px 25px;
 }
+.serviceBox{
+	padding: 5px 10px;
+	font-size: 13px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom: 1px solid rgb(218 218 218);
+}
