--- a/src/app/visibility/visibility.component.html
+++ b/src/app/visibility/visibility.component.html
@@ -28,19 +28,22 @@
                     <th>Status</th>
                   </tr> -->
                 <div class="mb-2" *ngFor="let service of serviceList; let i=index;" style="border: 1px solid #e6ecf1;border-radius: 5px;border-radius: 5px;cursor: pointer;" [ngClass]="{'bg-white': service.serviceId == selectedServiceId}"  [ngStyle]="{'box-shadow': service.serviceId == selectedServiceId ? '0 0 3px 1px rgb(47 65 81 / 53%)' : 'rgb(47 65 81 / 20%) 0px 0px 3px 1px'}">
-                  <div style="padding: 5px 10px;font-size: 13px;border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom: 1px solid rgb(218 218 218);" [ngStyle]="{'background': service.serviceId == selectedServiceId ? 'rgb(47 65 81 / 53%)' : 'white', 'color': service.serviceId == selectedServiceId ? 'white' : 'black'}" (click)="onClickService(service)">
-                    <span class="service-selection" style="">{{service.serviceName}}
+                  <div class="serviceBox" [ngStyle]="{'background': service.serviceId == selectedServiceId ? 'rgb(47 65 81 / 53%)' : 'white', 'color': service.serviceId == selectedServiceId ? 'white' : 'black'}" (click)="onClickService(service)" *ngIf="service.status.status != 'pending'">
+                    <span class="service-selection">{{service.serviceName}}
                     </span>
                   </div>
+                  <div class="serviceBox" [ngStyle]="{'background': service.serviceId == selectedServiceId ? 'rgb(47 65 81 / 53%)' : 'white', 'color': service.serviceId == selectedServiceId ? 'white' : 'black'}" (click)="servicePending(service)"  *ngIf="service.status.status === 'pending'">
+                    <span class="service-selection">{{service.serviceName}}
+                    </span></div>
                   <div class="">
                     <div style="padding: 5px 10px; background: white;">
                       <table class="gateNameSelection">
                         <tr>
                           <td>{{service.approvalGateName}} </td>
                           <td style="text-align: right;">
-                              <span [ngClass]= "{'text-danger':service.status.status === 'rejected','text-success':service.status.status === 'approved','text-activated':service.status.status === 'activated','text-waiting':service.status.status === 'waiting'}"
+                              <span [ngClass]= "{'text-danger':service.status.status === 'rejected','text-success':service.status.status === 'approved','text-activated':service.status.status === 'activated','text-waiting':service.status.status === 'pending'}"
                                     [title]="service.status.status">
-                                <i class="fas" [ngClass]= "{'fa-minus-circle':service.status.status === 'rejected','fa-check-circle':service.status.status === 'approved','fa-unlock':service.status.status === 'activated','fa-spinner':service.status.status === 'waiting'}"></i>
+                                <i class="fas" [ngClass]= "{'fa-minus-circle':service.status.status === 'rejected','fa-check-circle':service.status.status === 'approved','fa-unlock':service.status.status === 'activated','fa-spinner':service.status.status === 'pending'}" ></i>
                               </span>
                           </td>
                         </tr>
@@ -112,9 +115,9 @@
                     
                     <blockquote class="blockquote">
                       <p class="mb-0">{{selectedService.approvalGateName}} 
-                        <span [ngClass]= "{'text-danger':selectedService.status.status === 'rejected','text-success':selectedService.status.status === 'approved','text-activated':selectedService.status.status === 'activated','text-waiting':selectedService.status.status === 'waiting'}"
-                              [title]="selectedService.status.status">
-                          <i class="fas" [ngClass]= "{'fa-minus-circle':selectedService.status.status === 'rejected','fa-check-circle':selectedService.status.status === 'approved','fa-unlock':selectedService.status.status === 'activated','fa-spinner':selectedService.status.status === 'waiting'}"></i>
+                        <span [ngClass]= "{'text-danger':gateStatus === 'rejected','text-success':gateStatus === 'approved','text-activated':gateStatus === 'activated','text-waiting':gateStatus === 'pending'}"
+                              [title]="gateStatus">
+                          <i class="fas" [ngClass]= "{'fa-minus-circle':gateStatus === 'rejected','fa-check-circle':gateStatus === 'approved','fa-unlock':gateStatus === 'activated','fa-spinner':gateStatus === 'pending'}"></i>
                         </span>
                       </p>
                     </blockquote>
@@ -134,7 +137,7 @@
                                 </div>
 
                                 <!-- Grid row -->
-                                <div class="form-group row" *ngIf="approvalWaitingStatus" >
+                                <div class="form-group row" *ngIf="approvalWaitingStatus && !gateStatusPending" >
                                     <!-- Default input -->
                                     <label class="col-sm-1 col-form-label">Comments:</label>
                                     <div class="col-sm-8">
@@ -160,8 +163,8 @@
                                 </div>
 
 
-                                <div class="form-group row" *ngIf="!approvalWaitingStatus" >
-                                  <table class="commentsText">
+                                <div class="form-group row" *ngIf="!approvalWaitingStatus " >
+                                  <table class="commentsText" *ngIf="!gateStatusPending">
                                     <tr>
                                       <td><label >Comments:</label></td>
                                       <td>
@@ -169,20 +172,31 @@
                                       </td>
                                   </tr>
                                   <tr>
+                                      <td><label >Callback URL:</label></td>
+                                      <td>
+                                        <a href="{{gateApprovalCallBackURL}}">{{gateApprovalCallBackURL}}</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
                                       <td><label >Activated Time:</label></td>
                                       <td>
-                                        <!-- {{approvalGateComment}} -->
-                                        Nov 2, 2020 at 02:30:00 PM
+                                        <!-- {{approvalGateComment}} {{date | date:"dd/MM/yyyy HH:mm"}} -->
+                                        {{this.gateActivatedTime | date: "MMM dd, yyyy HH:mm"}}
                                       </td>
                                   </tr>
                                   <tr>
                                       <td><label >Approval Time:</label></td>
                                       <td>
                                         <!-- {{approvalGateComment}} -->
-                                        Nov 5, 2020 at 11:44:00 AM
+                                        {{this.gateApprovalTime | date: "MMM dd, yyyy HH:mm"}}
                                       </td>
                                   </tr>
                                 </table>
+                                <table class="commentsText" *ngIf="gateStatusPending">
+                                    <tr>
+                                      <td colspan="2">This gate is not activated.</td>
+                                  </tr>
+                                  </table>
                                   
                                     
                                   </div>
@@ -222,7 +236,7 @@
            
             <!-- </div> -->
             <!-- /.page-content -->
-            <div  class="row no-gutters" >
+            <div  class="row no-gutters" *ngIf="!gateStatusPending">
                 <div class="col-sm-12 d-flex flex-column">
                     <div class="pt-1">
                       <!--  *ngFor="let connectors of connectorTypes"  -->
@@ -249,7 +263,7 @@
                         </ul>
                         <div class="tab-content" id="myTabContent" *ngIf="showToolConnectorSection">
                             <div class="tab-pane p-4 fade show active" id="{{connectorType}}" role="tabpanel" aria-labelledby="">
-                                <div *ngIf="connectorType == 'GIT'">
+                                <div *ngIf="selectedConnectorType == 'GIT'">
                                   <table class="table">
                                     <thead class="thead-light">
                                       <tr>
@@ -267,7 +281,7 @@
                                     </tbody>
                                   </table>
                                 </div>
-                                <div *ngIf="connectorType == 'JIRA'">
+                                <div *ngIf="selectedConnectorType == 'JIRA'">
                                   <table class="table">
                                     <thead class="thead-light">
                                       <tr>
@@ -285,11 +299,11 @@
                                     </tbody>
                                   </table>
                                 </div>
-                                <div *ngIf="connectorType == 'Autopilot'">AUTOPILOT INFO3</div>
-                                <div *ngIf="connectorType == 'Sonarqube'">SONAEQUBE INFO4</div>
+                                <div *ngIf="connectorType == 'Autopilot'">AUTOPILOT INFO</div>
+                                <div *ngIf="connectorType == 'Sonarqube'">SONAEQUBE INFO</div>
                             </div>
                         </div>
-                        <div class="tab-content p-4 text-center" *ngIf="!showToolConnectorSection">Tool Connectors not present!</div>
+                        <div class="tab-content p-4 text-center" *ngIf="!showToolConnectorSection && !gateStatusPending">Tool Connectors not present!</div>
                     </div>
                     <!-- /.tab-lined -->
                     <!-- /.bottom_btns -->
