--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -12,7 +12,7 @@
   
         <div class="col-sm-3">
           <div class="sidebar-tree">
-            <ul class="tree-inset tree-active list-unstyled">
+            <!-- <ul class="tree-inset tree-active list-unstyled">
               <li class="ti-title showElementHover" (click)="loadApplicationForm()" >
                 <i class="fas fa-check-circle"></i>
                 <span>Application Details</span>
@@ -22,6 +22,34 @@
                 <span>Application Name :</span>
                 <strong></strong>
               </li>
+            </ul> -->
+            <ul class="tree-inset  list-unstyled {{createApplicationForm.value.name !== ''?'tree-active':''}}">
+              <li class="ti-title">
+                <i (click)="loadApplicationForm()" class="{{createApplicationForm.value.name !== ''?'fas fa-check-circle':'far fa-dot-circle'}}"></i>
+                <span>Application Details</span>
+              </li>
+              <li class="ti-item">
+                <i class="{{createApplicationForm.value.name !== ''?'fas fa-check-circle':'far fa-dot-circle'}}"></i>
+                <span>Application Name :</span>
+                <strong>{{createApplicationForm.value.name}}</strong>
+              </li>
+              <li class="ti-item">
+                <i class="{{createApplicationForm.value.emailId !== ''?'fas fa-check-circle':'far fa-dot-circle'}}"></i>
+                <span>Email :</span>
+                <strong>{{createApplicationForm.value.emailId}}</strong>
+              </li>
+              <li class="ti-item" *ngIf = "userType === 'AP' ? false : true ">
+                <i class="{{createApplicationForm.getRawValue().imageSource !== ''?'fas fa-check-circle':'far fa-dot-circle'}}"></i>
+                <span>Image Source :</span>
+                <strong>{{createApplicationForm.getRawValue().imageSource}}</strong>
+              </li>
+              <li class="ti-item">
+                <i class="{{createApplicationForm.value.description !== ''?'fas fa-check-circle':'far fa-dot-circle'}}"></i>
+                <span>Description :</span>
+                <strong>{{createApplicationForm.value.description}}</strong>
+              </li>
+              <br>
+              <br>
             </ul>
             <!-- /.tree-inset -->
             <ul class="tree-inset tree-active list-unstyled">
@@ -144,9 +172,7 @@
   
               <!-- ###################### Services Section Starts #####################################-->
   
-              <div class="col-10">
-                <hr class="ml-0 mt-3 mb-3" />
-              </div>
+            
               <!-- /.col-8 -->
               <div class="col-12" *ngIf="showServiceForm" >
                 <form [formGroup]="servicesForm">
@@ -609,9 +635,7 @@
   
                <!-- ###################### Environment Section Starts ###########################-->
   
-               <div class="col-10" *ngIf="showServiceForm">
-                <hr class="ml-0 mt-3 mb-3" />
-              </div>
+           
               <!-- /.col-8 -->
               <div class="col-8" *ngIf="showEnvironmentForm">
                 <div class="form-group group_permission">
@@ -662,8 +686,11 @@
                  <!--col-12-->
                  <div class="col-8 pull-right">
                   <div class="page_access text-right py-2 px-3">
-                    <button class="btn btn-primary ml-2" (click)="SubmitEnvironmentsForm()">Save</button>
+                    <button class="btn btn-primary ml-2" *ngIf="editMode" (click)="SubmitEnvironmentsForm()">Update</button>
+                    <button class="btn btn-primary ml-2" *ngIf="!editMode" (click)="SubmitEnvironmentsForm()">Save</button>
                     <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
+                    <button class="btn btn-danger ml-1" (click)="deleteEnvironments()">Delete</button>
+ 
                     <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                    
                   </div>
@@ -758,6 +785,8 @@
                 <div class="page_access text-right py-2 px-3">
                   <button class="btn btn-primary ml-2" (click)="SubmitGroupPermissionForm()">Save</button>
                   <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
+                  <button class="btn btn-danger ml-1" (click)="deleteGroupPermissions()">Delete</button>
+
                   <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                  
                 </div>
