adding custom tags

--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -839,7 +839,7 @@
         </button>
       </div>
       <div class="modal-body p-0">
-        <app-log-template [isEditMode]="templateEditMode" [templateData]="editTemplateData" [templateIndex]="editTemplateIndex"></app-log-template>
+        <app-log-template [isEditMode]="templateEditMode" [templateData]="editTemplateData" [templateIndex]="editTemplateIndex" [applicationId] = "applicationId"></app-log-template>
       </div>
     </div>
   </div>
