--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.less
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.less
@@ -32,3 +32,21 @@ overflow-y:auto;
     background-color: #007bff !important;
     color: #fff;
 }
+.inlineFlex
+{
+    display: inline-flex;
+    width: 300px;
+}
+
+.block{
+    display: block;
+}
+
+.widthfull
+{
+    width: 100%;;
+}
+.ml-10
+{
+    margin-left: 10px;
+}
